--- a/gb/18/6/15/n10486427.md
+++ b/gb/18/6/15/n10486427.md
@@ -163,12 +163,12 @@
 <p>[8] 中华的天人合一思维，层次性的宇宙观（学术体系的总原则），佛道的精神，始终是真正开放的知识体系与思维方式。中国的佛道文化包含人类现有的一切科学、哲学、神学体系，但西方的科学、哲学与神学却将中华的佛道完全排除在外，只是其哲学到了现代在思维方式上有所回归东方而已（如现象学）。所以，中国人的宇宙观自古以来都是最开放的、从来都没有封闭，至于近代以来为什么总说中国人很封闭，那是由于两方面的原因：一是近代明（后期，郑和下西洋以后）清政权的闭关锁国不与外界沟通而造成的政治经济方面的孤立；二是西方文化入侵使中国人对自己传统文化丧失信心，逐渐遗忘了祖传的性命之学转而去研究西方的实证科学，并以此狭隘思维方式回顾自己的文化时所造成的偏差式反映！（全文完）</p>
 <p>责任编辑：高义</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/21/n10412323.md#1">惠虎宇：中共意识形态之理性批判（2）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/23/n10418737.md#1">惠虎宇：中共意识形态之理性批判（4）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/23/n10418987.md#1">惠虎宇：中共意识形态之理性批判（3）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/29/n10435485.md#1">惠虎宇：中共意识形态之理性批判（5）</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/14/n10144729.md#1" target="_blank">林辉：支持缅共的知青旅往事并不如烟</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/26/n10667251.md#1" target="_blank">这些患绝症的精英们何以逢生（3）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772976.md#1" target="_blank">林辉：中共当年盘剥延安人 被骂很“黑”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md#1" target="_blank">【新纪元周刊】揭开活摘器官黑幕</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
